fixed singup page overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -529,7 +529,6 @@ input {
   width: calc(100vw - 40px);
   /* border: 1px solid red; */
   margin-inline: 20px;
-  margin-top: 100px;
 }
 .other__login {
   margin: 0 auto;
