--- a/src/pages/Signup/index.css
+++ b/src/pages/Signup/index.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top:100px;
 }
 
 .img-outer .img-inner {
